[tool.poetry]
name = "pyspark-template"
version = "0.1.0"
description = "PySpark template project with Poetry"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.14.0"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.12.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
